--- a/adlist/ads/templates/ad_delete.html
+++ b/adlist/ads/templates/ad_delete.html
@@ -1,6 +1,7 @@
 <meta name="wa4e" content="bf8229696f7a3bb4700cfddef19fa23f">
 
-{% extends "base_bootstrap.html" %}
+
+{% extends "base_menu.html" %}
 {% block content %}
 <h1>Delete Ad</h1>
 
